# pekora

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: calculate.md  index.md  install.md  license.md  make.md  mkdocs.yml  read.md
docs/.overrides/partials/: copyright.html
docs/docs/: index.md
docs/overrides/partials/: copyright.html
pekora/: callbacks.py  cli.py  exceptions.py  models.py  peko.py  prefs.py  prompts.py  settings.py  utils.py
