[tool.poetry]
name = "pekora"
version = "1.0.5"
description = "A command-line calculator for Discord permission values"
authors = ["celsius narhwal <hello@celsiusnarhwal.dev>"]
readme = "README.md"
license = "MIT"
homepage = "https://pekora.celsiusnarhwal.dev"
documentation = "https://pekora.celsiusnarhwal.dev"
repository = "https://github.com/celsiusnarhwal/pekora"
include = ["LICENSE.md"]

[tool.poetry.dependencies]
python = "^3.11"
alianator = "^4.0.2"
colour = "^0.1.5"
decorator = "^5.1.1"
inflect = "^6.0.2"
inquirerpy = "^0.3.4"
py-cord = "^2.4.0"
pyperclip = "1.8.1"
yarl = "^1.8.2"
typer = { extras = ["all"], version = "^0.7.0" }

[tool.poetry.group.docs.dependencies]
cairosvg = "^2.6.0"
mkdocs-git-committers-plugin-2 = "^1.1.1"
pillow = "^9.4.0"
poethepoet = "^0.19.0"
mkdocs-material = { git = "https://github.com/squidfunk/mkdocs-material-insiders" }

[tool.poetry.group.repl.dependencies]
ipython = "^8.11.0"

[tool.poetry.scripts]
pekora = "pekora.cli:app"

[tool.poe.tasks]
clear = "rm -rf site .cache"
docs = { shell = "mkdocs serve" }
format = { shell = "for hook in black prettier isort; do pre-commit run $hook --all-files; done" }

[tool.poe.tasks.fontawesome]
shell = """
npm install --no-save @celsiusnarhwal/fontawesome
mv node_modules/@celsiusnarhwal/fontawesome/svgs docs/.overrides/.icons/fontawesome
rm -rf node_modules
"""

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
